# docker-opnsense-integration

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
.devcontainer/: devcontainer.json
src/: main.rs
src/docker/: container.rs  get_running_containers.rs  mod.rs
src/opnsense/: add_firewall_source_nat_rule.rs  add_unbound_host_override.rs  firewallsourcenatrulesapi.rs  mod.rs  search_existing_unbound_host_overrides.rs  search_firewall_source_nat_rules.rs  sourcenatrule.rs
