[package]
name = "docker-opnsense-integration"
version = "0.1.0"
edition = "2021"

[dependencies]
json = "0.12"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
trust-dns-resolver = "0.21"
log = "0.4"
env_logger = "0.9"
signal-hook = "0.3"
tiny_http = "0.11"